--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -12,7 +12,7 @@
 
     @include respond(phone){
       padding-top: 0;
-      padding-bottom: 16px;
+      padding-bottom: 40px;
     }
   }
 
@@ -55,7 +55,7 @@
     // clip-path: polygon(0 12%, 100% 8%, 100% 96%, 0 100%);
     -webkit-clip-path: polygon(0 0, 100% 4%, 100% 100%, 0% 100%);
     clip-path: polygon(0 0, 100% 4%, 100% 100%, 0% 100%);
-    margin-top: -5vh;
+    margin-top: -12vh;
   }
 }
 
